Project

General

Profile

Actions

Bug #15618

closed

'period update' does not remove short_zone_ids of deleted zones

Added by Casey Bodley about 8 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

After 'zone delete' and 'period update', the deleted zone's id is still listed under the period's short_zone_ids.

http://pastebin.test.redhat.com/369039


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #19341: jewel: 'period update' does not remove short_zone_ids of deleted zonesResolvedNathan CutlerActions
Copied to rgw - Backport #19342: kraken: 'period update' does not remove short_zone_ids of deleted zonesResolvedNathan CutlerActions
Actions #1

Updated by Abhishek Lekshmanan about 8 years ago

Don't we still reference the short zone ids for determining source of an object etc. will there be any effect if we end up totally removing it on zone deletion?

Actions #2

Updated by Casey Bodley almost 8 years ago

As far as I can tell, there aren't any code paths that look up other zones from the period's short_zone_ids map. The only user of this map is on startup, for the current gateway to learn its own short id for RGWRados::get_zone_short_id().

Actions #3

Updated by Yehuda Sadeh almost 8 years ago

the short zone id is stored on the objects, and serves as a tie breaker for sync

Actions #4

Updated by Casey Bodley almost 8 years ago

  • Status changed from New to Closed

it turns out that we do want to keep deleted zones in the period, so we can check new zones against them for hash collisions

Actions #5

Updated by Casey Bodley about 7 years ago

  • Status changed from Closed to In Progress

reopened after further discussion

Actions #6

Updated by Casey Bodley about 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #7

Updated by Casey Bodley about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to jewel kraken
Actions #8

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19341: jewel: 'period update' does not remove short_zone_ids of deleted zones added
Actions #9

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19342: kraken: 'period update' does not remove short_zone_ids of deleted zones added
Actions #10

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF