rgw: deleted zones are removed from period short_zone_ids

Fixes: http://tracker.ceph.com/issues/15618

Signed-off-by: Casey Bodley <cbodley@redhat.com>